--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -6,7 +6,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 # Switch to root user
 USER root
 
-# Install Java tools - Multiple OpenJDK versions (21, 23, 24, 25)
+# Install Java tools - Multiple OpenJDK versions (21, 23)
 # Install prerequisites and ca-certificates
 # hadolint ignore=DL3008,DL3009
 RUN apt-get update && \
@@ -26,16 +26,6 @@ RUN apt-get update && \
     mkdir -p /usr/lib/jvm/temurin-23-jdk-amd64 && \
     tar -xzf /tmp/jdk-23.tar.gz -C /usr/lib/jvm/temurin-23-jdk-amd64 --strip-components=1 && \
     rm /tmp/jdk-23.tar.gz && \
-    # Download and install OpenJDK 24 (Temurin) - Early Access
-    curl -L -o /tmp/jdk-24.tar.gz https://github.com/adoptium/temurin24-binaries/releases/download/jdk-24%2B25-ea-beta/OpenJDK24U-jdk_x64_linux_hotspot_24_25.tar.gz && \
-    mkdir -p /usr/lib/jvm/temurin-24-jdk-amd64 && \
-    tar -xzf /tmp/jdk-24.tar.gz -C /usr/lib/jvm/temurin-24-jdk-amd64 --strip-components=1 && \
-    rm /tmp/jdk-24.tar.gz && \
-    # Download and install OpenJDK 25 (Temurin) - Early Access
-    curl -L -o /tmp/jdk-25.tar.gz https://github.com/adoptium/temurin25-binaries/releases/download/jdk-25%2B5-ea-beta/OpenJDK25U-jdk_x64_linux_hotspot_25_5.tar.gz && \
-    mkdir -p /usr/lib/jvm/temurin-25-jdk-amd64 && \
-    tar -xzf /tmp/jdk-25.tar.gz -C /usr/lib/jvm/temurin-25-jdk-amd64 --strip-components=1 && \
-    rm /tmp/jdk-25.tar.gz && \
     # Configure update-alternatives to manage Java versions
     update-alternatives --install /usr/bin/java java /usr/lib/jvm/temurin-21-jdk-amd64/bin/java 2100 \
         --slave /usr/bin/javac javac /usr/lib/jvm/temurin-21-jdk-amd64/bin/javac \
@@ -43,12 +33,6 @@ RUN apt-get update && \
     update-alternatives --install /usr/bin/java java /usr/lib/jvm/temurin-23-jdk-amd64/bin/java 2300 \
         --slave /usr/bin/javac javac /usr/lib/jvm/temurin-23-jdk-amd64/bin/javac \
         --slave /usr/bin/jar jar /usr/lib/jvm/temurin-23-jdk-amd64/bin/jar && \
-    update-alternatives --install /usr/bin/java java /usr/lib/jvm/temurin-24-jdk-amd64/bin/java 2400 \
-        --slave /usr/bin/javac javac /usr/lib/jvm/temurin-24-jdk-amd64/bin/javac \
-        --slave /usr/bin/jar jar /usr/lib/jvm/temurin-24-jdk-amd64/bin/jar && \
-    update-alternatives --install /usr/bin/java java /usr/lib/jvm/temurin-25-jdk-amd64/bin/java 2500 \
-        --slave /usr/bin/javac javac /usr/lib/jvm/temurin-25-jdk-amd64/bin/javac \
-        --slave /usr/bin/jar jar /usr/lib/jvm/temurin-25-jdk-amd64/bin/jar && \
     # Set Java 21 (LTS) as default
     update-alternatives --set java /usr/lib/jvm/temurin-21-jdk-amd64/bin/java && \
     # Clean up
