feat: Update base image

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,5 @@
 # hadolint ignore=DL3007
-FROM dast1986/slough-dev-dc-generic-base:latest AS base
+FROM dast1986/slough-dev-dc-generic-base:1.0.0 AS base
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
